cluster/apps/owncloud/namespace.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: owncloud
  labels:
    goldilocks.fairwinds.com/enabled: "true"
