cluster/apps/owncloud/deploy.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: owncloud
  namespace: owncloud
  labels:
    service: owncloud
spec:
  strategy:
    type: RollingUpdate
  selector:
    matchLabels:
      service: owncloud
  template:
    metadata:
      annotations:
        configmap.reloader.stakater.com/reload: owncloud-config
        secret.reloader.stakater.com/reload: owncloud-secret
      labels:
        service: owncloud
    spec:
      securityContext:
        runAsUser: 1000
        runAsGroup: 1000
        fsGroup: 1000
      containers:
        - name: owncloud
          image: owncloud/ocis:7.1.0-rc.3 # https://hub.docker.com/r/owncloud/ocis
          imagePullPolicy: IfNotPresent
          command:
            # run ocis init to initialize a configuration file with random secrets
            # it will fail on subsequent runs, because the config file already exists
            # therefore we ignore the error and then start the ocis server
            ["/bin/sh", "-c", "ocis init || true; ocis server"]
          ports:
            - containerPort: 9100
              name: ocis-backend
            - containerPort: 9200
              name: ocis-web
          resources:
            requests:
              cpu: "300m"
              memory: "256Mi"
            limits:
              memory: "256Mi"
          volumeMounts:
            - mountPath: /etc/ocis
              name: owncloud-config-pvc
            - mountPath: /var/lib/ocis
              name: owncloud-data-pvc
      restartPolicy: Always
      nodeSelector:
        kubernetes.io/hostname: nuc7pjyhn
      volumes:
        - name: owncloud-config-pvc
          persistentVolumeClaim:
            claimName: owncloud-config-pvc
        - name: owncloud-data-pvc
          persistentVolumeClaim:
            claimName: owncloud-data-pvc
