cluster/apps/owncloud/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: owncloud-web
  namespace: owncloud
  labels:
    service: owncloud
spec:
  ports:
    - name: "web"
      port: 9100
      targetPort: 9100
  selector:
    service: owncloud
